--- a/css/style.css
+++ b/css/style.css
@@ -653,12 +653,16 @@ body {
 
     opacity: 0;
 
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateY(294px);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.overlay-portfilio-text:hover {
+.our-portfolio-item:hover .overlay-portfilio-text {
     opacity: 1;
-}
+    transform: translateY(0);
+} 
+
+
 
 .portfolio-text {
     font-weight: normal;
